--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-parallax-tilt": "^1.7.300"
+    "react-parallax-tilt": "^1.7.300",
+    "react-spinners": "^0.17.0",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
